crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__ast_block_relations.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: ast
---
Ast {
    types: TypeDefPool {
        span: [],
        name: [],
        lets: [],
        defs: [],
    },
    lets: LetMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    defs: DefMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    exprs: ExprPool {
        span: [],
        term: [],
    },
    tests: TestDefPool {
        span: [
            Span {
                start: 0,
                size: 102,
            },
        ],
        name: [
            Span {
                start: 5,
                size: 3,
            },
        ],
        relations: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 2,
                },
            },
        ],
        asserts: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 0,
                },
            },
        ],
    },
    relations: RelationPool {
        span: [
            Span {
                start: 48,
                size: 17,
            },
            Span {
                start: 73,
                size: 18,
            },
        ],
        resource: [
            Instance {
                ty: Span {
                    start: 29,
                    size: 3,
                },
                id: Span {
                    start: 33,
                    size: 3,
                },
            },
            Instance {
                ty: Span {
                    start: 29,
                    size: 3,
                },
                id: Span {
                    start: 33,
                    size: 3,
                },
            },
        ],
        relation: [
            Span {
                start: 48,
                size: 5,
            },
            Span {
                start: 73,
                size: 6,
            },
        ],
        subject: [
            Id {
                index: 0,
            },
            Id {
                index: 1,
            },
        ],
    },
    subjects: SubjectPool {
        span: [
            Span {
                start: 55,
                size: 9,
            },
            Span {
                start: 81,
                size: 9,
            },
        ],
        instance: [
            Instance {
                ty: Span {
                    start: 55,
                    size: 4,
                },
                id: Span {
                    start: 60,
                    size: 3,
                },
            },
            Instance {
                ty: Span {
                    start: 81,
                    size: 4,
                },
                id: Span {
                    start: 86,
                    size: 3,
                },
            },
        ],
        permission: [
            None,
            None,
        ],
    },
    asserts: AssertPool {
        span: [],
        kind: [],
        resource: [],
        permission: [],
        actor: [],
    },
}
