crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__ast_expr_parenthesized.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: ast
---
Ast {
    types: TypeDefPool {
        span: [
            Span {
                start: 0,
                size: 33,
            },
        ],
        name: [
            Span {
                start: 5,
                size: 1,
            },
        ],
        lets: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 1,
                },
            },
        ],
        defs: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 0,
                },
            },
        ],
    },
    lets: LetMemberPool {
        span: [
            Span {
                start: 11,
                size: 20,
            },
        ],
        name: [
            Span {
                start: 15,
                size: 1,
            },
        ],
        expr: [
            Id {
                index: 5,
            },
        ],
    },
    defs: DefMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    exprs: ExprPool {
        span: [
            Span {
                start: 20,
                size: 1,
            },
            Span {
                start: 24,
                size: 1,
            },
            Span {
                start: 20,
                size: 5,
            },
            Span {
                start: 19,
                size: 7,
            },
            Span {
                start: 29,
                size: 1,
            },
            Span {
                start: 19,
                size: 11,
            },
        ],
        term: [
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 20,
                        size: 1,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 24,
                        size: 1,
                    },
                },
            ),
            Binary(
                ExprTermBinary {
                    op: Union,
                    lhs: Id {
                        index: 0,
                    },
                    rhs: Id {
                        index: 1,
                    },
                },
            ),
            Paren(
                ExprTermParen {
                    inner: Id {
                        index: 2,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 29,
                        size: 1,
                    },
                },
            ),
            Binary(
                ExprTermBinary {
                    op: Intersection,
                    lhs: Id {
                        index: 3,
                    },
                    rhs: Id {
                        index: 4,
                    },
                },
            ),
        ],
    },
    tests: TestDefPool {
        span: [],
        name: [],
        relations: [],
        asserts: [],
    },
    relations: RelationPool {
        span: [],
        resource: [],
        relation: [],
        subject: [],
    },
    subjects: SubjectPool {
        span: [],
        instance: [],
        permission: [],
    },
    asserts: AssertPool {
        span: [],
        kind: [],
        resource: [],
        permission: [],
        actor: [],
    },
}
