crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__ast_expr_precedence.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: ast
---
Ast {
    types: TypeDefPool {
        span: [
            Span {
                start: 0,
                size: 35,
            },
        ],
        name: [
            Span {
                start: 5,
                size: 1,
            },
        ],
        lets: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 1,
                },
            },
        ],
        defs: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 0,
                },
            },
        ],
    },
    lets: LetMemberPool {
        span: [
            Span {
                start: 11,
                size: 22,
            },
        ],
        name: [
            Span {
                start: 15,
                size: 1,
            },
        ],
        expr: [
            Id {
                index: 6,
            },
        ],
    },
    defs: DefMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    exprs: ExprPool {
        span: [
            Span {
                start: 19,
                size: 1,
            },
            Span {
                start: 23,
                size: 1,
            },
            Span {
                start: 27,
                size: 1,
            },
            Span {
                start: 31,
                size: 1,
            },
            Span {
                start: 27,
                size: 5,
            },
            Span {
                start: 23,
                size: 9,
            },
            Span {
                start: 19,
                size: 13,
            },
        ],
        term: [
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 19,
                        size: 1,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 23,
                        size: 1,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 27,
                        size: 1,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 31,
                        size: 1,
                    },
                },
            ),
            Binary(
                ExprTermBinary {
                    op: Exclusion,
                    lhs: Id {
                        index: 2,
                    },
                    rhs: Id {
                        index: 3,
                    },
                },
            ),
            Binary(
                ExprTermBinary {
                    op: Intersection,
                    lhs: Id {
                        index: 1,
                    },
                    rhs: Id {
                        index: 4,
                    },
                },
            ),
            Binary(
                ExprTermBinary {
                    op: Union,
                    lhs: Id {
                        index: 0,
                    },
                    rhs: Id {
                        index: 5,
                    },
                },
            ),
        ],
    },
    tests: TestDefPool {
        span: [],
        name: [],
        relations: [],
        asserts: [],
    },
    relations: RelationPool {
        span: [],
        resource: [],
        relation: [],
        subject: [],
    },
    subjects: SubjectPool {
        span: [],
        instance: [],
        permission: [],
    },
    asserts: AssertPool {
        span: [],
        kind: [],
        resource: [],
        permission: [],
        actor: [],
    },
}
