crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__ast_full_realistic_schema.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: ast
---
Ast {
    types: TypeDefPool {
        span: [
            Span {
                start: 0,
                size: 12,
            },
            Span {
                start: 14,
                size: 86,
            },
            Span {
                start: 102,
                size: 117,
            },
        ],
        name: [
            Span {
                start: 5,
                size: 4,
            },
            Span {
                start: 19,
                size: 12,
            },
            Span {
                start: 107,
                size: 10,
            },
        ],
        lets: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 0,
                },
            },
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 2,
                },
            },
            Range {
                start: Id {
                    index: 2,
                },
                end: Id {
                    index: 4,
                },
            },
        ],
        defs: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 0,
                },
            },
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 1,
                },
            },
            Range {
                start: Id {
                    index: 1,
                },
                end: Id {
                    index: 2,
                },
            },
        ],
    },
    lets: LetMemberPool {
        span: [
            Span {
                start: 36,
                size: 17,
            },
            Span {
                start: 56,
                size: 18,
            },
            Span {
                start: 122,
                size: 23,
            },
            Span {
                start: 148,
                size: 33,
            },
        ],
        name: [
            Span {
                start: 40,
                size: 5,
            },
            Span {
                start: 60,
                size: 6,
            },
            Span {
                start: 126,
                size: 3,
            },
            Span {
                start: 152,
                size: 6,
            },
        ],
        expr: [
            Id {
                index: 0,
            },
            Id {
                index: 1,
            },
            Id {
                index: 3,
            },
            Id {
                index: 6,
            },
        ],
    },
    defs: DefMemberPool {
        span: [
            Span {
                start: 78,
                size: 20,
            },
            Span {
                start: 185,
                size: 32,
            },
        ],
        name: [
            Span {
                start: 82,
                size: 6,
            },
            Span {
                start: 189,
                size: 4,
            },
        ],
        expr: [
            Id {
                index: 2,
            },
            Id {
                index: 9,
            },
        ],
    },
    exprs: ExprPool {
        span: [
            Span {
                start: 48,
                size: 4,
            },
            Span {
                start: 69,
                size: 4,
            },
            Span {
                start: 91,
                size: 6,
            },
            Span {
                start: 132,
                size: 12,
            },
            Span {
                start: 161,
                size: 4,
            },
            Span {
                start: 168,
                size: 12,
            },
            Span {
                start: 161,
                size: 19,
            },
            Span {
                start: 196,
                size: 7,
            },
            Span {
                start: 206,
                size: 10,
            },
            Span {
                start: 196,
                size: 20,
            },
        ],
        term: [
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 48,
                        size: 4,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 69,
                        size: 4,
                    },
                },
            ),
            SelfRef(
                ExprTermSelfRef {
                    span: Span {
                        start: 92,
                        size: 5,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 132,
                        size: 12,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 161,
                        size: 4,
                    },
                },
            ),
            UsersetTypeRef(
                ExprTermUsersetTypeRef {
                    ty: Span {
                        start: 168,
                        size: 4,
                    },
                    member: Span {
                        start: 174,
                        size: 6,
                    },
                },
            ),
            Binary(
                ExprTermBinary {
                    op: Union,
                    lhs: Id {
                        index: 4,
                    },
                    rhs: Id {
                        index: 5,
                    },
                },
            ),
            SelfRef(
                ExprTermSelfRef {
                    span: Span {
                        start: 197,
                        size: 6,
                    },
                },
            ),
            Traversal(
                ExprTermTraversal {
                    relation: Span {
                        start: 207,
                        size: 3,
                    },
                    permission: Span {
                        start: 211,
                        size: 5,
                    },
                },
            ),
            Binary(
                ExprTermBinary {
                    op: Union,
                    lhs: Id {
                        index: 7,
                    },
                    rhs: Id {
                        index: 8,
                    },
                },
            ),
        ],
    },
    tests: TestDefPool {
        span: [
            Span {
                start: 221,
                size: 334,
            },
        ],
        name: [
            Span {
                start: 226,
                size: 11,
            },
        ],
        relations: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 4,
                },
            },
        ],
        asserts: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 2,
                },
            },
        ],
    },
    relations: RelationPool {
        span: [
            Span {
                start: 289,
                size: 21,
            },
            Span {
                start: 318,
                size: 20,
            },
            Span {
                start: 377,
                size: 26,
            },
            Span {
                start: 411,
                size: 20,
            },
        ],
        resource: [
            Instance {
                ty: Span {
                    start: 258,
                    size: 12,
                },
                id: Span {
                    start: 271,
                    size: 6,
                },
            },
            Instance {
                ty: Span {
                    start: 258,
                    size: 12,
                },
                id: Span {
                    start: 271,
                    size: 6,
                },
            },
            Instance {
                ty: Span {
                    start: 350,
                    size: 10,
                },
                id: Span {
                    start: 361,
                    size: 4,
                },
            },
            Instance {
                ty: Span {
                    start: 350,
                    size: 10,
                },
                id: Span {
                    start: 361,
                    size: 4,
                },
            },
        ],
        relation: [
            Span {
                start: 289,
                size: 5,
            },
            Span {
                start: 318,
                size: 6,
            },
            Span {
                start: 377,
                size: 3,
            },
            Span {
                start: 411,
                size: 6,
            },
        ],
        subject: [
            Id {
                index: 0,
            },
            Id {
                index: 1,
            },
            Id {
                index: 2,
            },
            Id {
                index: 3,
            },
        ],
    },
    subjects: SubjectPool {
        span: [
            Span {
                start: 296,
                size: 13,
            },
            Span {
                start: 326,
                size: 11,
            },
            Span {
                start: 382,
                size: 20,
            },
            Span {
                start: 419,
                size: 11,
            },
        ],
        instance: [
            Instance {
                ty: Span {
                    start: 296,
                    size: 4,
                },
                id: Span {
                    start: 301,
                    size: 7,
                },
            },
            Instance {
                ty: Span {
                    start: 326,
                    size: 4,
                },
                id: Span {
                    start: 331,
                    size: 5,
                },
            },
            Instance {
                ty: Span {
                    start: 382,
                    size: 12,
                },
                id: Span {
                    start: 395,
                    size: 6,
                },
            },
            Instance {
                ty: Span {
                    start: 419,
                    size: 4,
                },
                id: Span {
                    start: 424,
                    size: 5,
                },
            },
        ],
        permission: [
            None,
            None,
            None,
            None,
        ],
    },
    asserts: AssertPool {
        span: [
            Span {
                start: 446,
                size: 55,
            },
            Span {
                start: 504,
                size: 51,
            },
        ],
        kind: [
            Assert,
            AssertNot,
        ],
        resource: [
            Instance {
                ty: Span {
                    start: 454,
                    size: 12,
                },
                id: Span {
                    start: 467,
                    size: 6,
                },
            },
            Instance {
                ty: Span {
                    start: 516,
                    size: 10,
                },
                id: Span {
                    start: 527,
                    size: 4,
                },
            },
        ],
        permission: [
            Span {
                start: 475,
                size: 6,
            },
            Span {
                start: 533,
                size: 4,
            },
        ],
        actor: [
            Instance {
                ty: Span {
                    start: 483,
                    size: 4,
                },
                id: Span {
                    start: 488,
                    size: 7,
                },
            },
            Instance {
                ty: Span {
                    start: 539,
                    size: 4,
                },
                id: Span {
                    start: 544,
                    size: 5,
                },
            },
        ],
    },
}
