crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__ast_test_with_relations_and_asserts.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: ast
---
Ast {
    types: TypeDefPool {
        span: [],
        name: [],
        lets: [],
        defs: [],
    },
    lets: LetMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    defs: DefMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    exprs: ExprPool {
        span: [],
        term: [],
    },
    tests: TestDefPool {
        span: [
            Span {
                start: 0,
                size: 215,
            },
        ],
        name: [
            Span {
                start: 5,
                size: 8,
            },
        ],
        relations: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 2,
                },
            },
        ],
        asserts: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 2,
                },
            },
        ],
    },
    relations: RelationPool {
        span: [
            Span {
                start: 47,
                size: 21,
            },
            Span {
                start: 85,
                size: 28,
            },
        ],
        resource: [
            Instance {
                ty: Span {
                    start: 34,
                    size: 3,
                },
                id: Span {
                    start: 38,
                    size: 6,
                },
            },
            Instance {
                ty: Span {
                    start: 73,
                    size: 4,
                },
                id: Span {
                    start: 78,
                    size: 4,
                },
            },
        ],
        relation: [
            Span {
                start: 47,
                size: 5,
            },
            Span {
                start: 85,
                size: 6,
            },
        ],
        subject: [
            Id {
                index: 0,
            },
            Id {
                index: 1,
            },
        ],
    },
    subjects: SubjectPool {
        span: [
            Span {
                start: 54,
                size: 13,
            },
            Span {
                start: 93,
                size: 19,
            },
        ],
        instance: [
            Instance {
                ty: Span {
                    start: 54,
                    size: 4,
                },
                id: Span {
                    start: 59,
                    size: 7,
                },
            },
            Instance {
                ty: Span {
                    start: 93,
                    size: 4,
                },
                id: Span {
                    start: 98,
                    size: 5,
                },
            },
        ],
        permission: [
            None,
            Some(
                Span {
                    start: 106,
                    size: 6,
                },
            ),
        ],
    },
    asserts: AssertPool {
        span: [
            Span {
                start: 121,
                size: 46,
            },
            Span {
                start: 170,
                size: 45,
            },
        ],
        kind: [
            Assert,
            AssertNot,
        ],
        resource: [
            Instance {
                ty: Span {
                    start: 129,
                    size: 3,
                },
                id: Span {
                    start: 133,
                    size: 6,
                },
            },
            Instance {
                ty: Span {
                    start: 182,
                    size: 4,
                },
                id: Span {
                    start: 187,
                    size: 4,
                },
            },
        ],
        permission: [
            Span {
                start: 141,
                size: 6,
            },
            Span {
                start: 193,
                size: 4,
            },
        ],
        actor: [
            Instance {
                ty: Span {
                    start: 149,
                    size: 4,
                },
                id: Span {
                    start: 154,
                    size: 7,
                },
            },
            Instance {
                ty: Span {
                    start: 199,
                    size: 4,
                },
                id: Span {
                    start: 204,
                    size: 5,
                },
            },
        ],
    },
}
