crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__ast_type_with_defs.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: ast
---
Ast {
    types: TypeDefPool {
        span: [
            Span {
                start: 0,
                size: 57,
            },
        ],
        name: [
            Span {
                start: 5,
                size: 4,
            },
        ],
        lets: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 0,
                },
            },
        ],
        defs: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 1,
                },
            },
        ],
    },
    lets: LetMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    defs: DefMemberPool {
        span: [
            Span {
                start: 14,
                size: 41,
            },
        ],
        name: [
            Span {
                start: 18,
                size: 4,
            },
        ],
        expr: [
            Id {
                index: 2,
            },
        ],
    },
    exprs: ExprPool {
        span: [
            Span {
                start: 25,
                size: 7,
            },
            Span {
                start: 35,
                size: 19,
            },
            Span {
                start: 25,
                size: 29,
            },
        ],
        term: [
            SelfRef(
                ExprTermSelfRef {
                    span: Span {
                        start: 26,
                        size: 6,
                    },
                },
            ),
            Traversal(
                ExprTermTraversal {
                    relation: Span {
                        start: 36,
                        size: 12,
                    },
                    permission: Span {
                        start: 49,
                        size: 5,
                    },
                },
            ),
            Binary(
                ExprTermBinary {
                    op: Union,
                    lhs: Id {
                        index: 0,
                    },
                    rhs: Id {
                        index: 1,
                    },
                },
            ),
        ],
    },
    tests: TestDefPool {
        span: [],
        name: [],
        relations: [],
        asserts: [],
    },
    relations: RelationPool {
        span: [],
        resource: [],
        relation: [],
        subject: [],
    },
    subjects: SubjectPool {
        span: [],
        instance: [],
        permission: [],
    },
    asserts: AssertPool {
        span: [],
        kind: [],
        resource: [],
        permission: [],
        actor: [],
    },
}
