crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__ast_type_with_lets.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: ast
---
Ast {
    types: TypeDefPool {
        span: [
            Span {
                start: 0,
                size: 63,
            },
        ],
        name: [
            Span {
                start: 5,
                size: 4,
            },
        ],
        lets: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 2,
                },
            },
        ],
        defs: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 0,
                },
            },
        ],
    },
    lets: LetMemberPool {
        span: [
            Span {
                start: 14,
                size: 26,
            },
            Span {
                start: 43,
                size: 18,
            },
        ],
        name: [
            Span {
                start: 18,
                size: 6,
            },
            Span {
                start: 47,
                size: 6,
            },
        ],
        expr: [
            Id {
                index: 0,
            },
            Id {
                index: 1,
            },
        ],
    },
    defs: DefMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    exprs: ExprPool {
        span: [
            Span {
                start: 27,
                size: 12,
            },
            Span {
                start: 56,
                size: 4,
            },
        ],
        term: [
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 27,
                        size: 12,
                    },
                },
            ),
            TypeRef(
                ExprTermTypeRef {
                    span: Span {
                        start: 56,
                        size: 4,
                    },
                },
            ),
        ],
    },
    tests: TestDefPool {
        span: [],
        name: [],
        relations: [],
        asserts: [],
    },
    relations: RelationPool {
        span: [],
        resource: [],
        relation: [],
        subject: [],
    },
    subjects: SubjectPool {
        span: [],
        instance: [],
        permission: [],
    },
    asserts: AssertPool {
        span: [],
        kind: [],
        resource: [],
        permission: [],
        actor: [],
    },
}
