crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__ast_userset_ref.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: ast
---
Ast {
    types: TypeDefPool {
        span: [
            Span {
                start: 0,
                size: 34,
            },
        ],
        name: [
            Span {
                start: 5,
                size: 1,
            },
        ],
        lets: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 1,
                },
            },
        ],
        defs: [
            Range {
                start: Id {
                    index: 0,
                },
                end: Id {
                    index: 0,
                },
            },
        ],
    },
    lets: LetMemberPool {
        span: [
            Span {
                start: 11,
                size: 21,
            },
        ],
        name: [
            Span {
                start: 15,
                size: 1,
            },
        ],
        expr: [
            Id {
                index: 0,
            },
        ],
    },
    defs: DefMemberPool {
        span: [],
        name: [],
        expr: [],
    },
    exprs: ExprPool {
        span: [
            Span {
                start: 19,
                size: 12,
            },
        ],
        term: [
            UsersetTypeRef(
                ExprTermUsersetTypeRef {
                    ty: Span {
                        start: 19,
                        size: 4,
                    },
                    member: Span {
                        start: 25,
                        size: 6,
                    },
                },
            ),
        ],
    },
    tests: TestDefPool {
        span: [],
        name: [],
        relations: [],
        asserts: [],
    },
    relations: RelationPool {
        span: [],
        resource: [],
        relation: [],
        subject: [],
    },
    subjects: SubjectPool {
        span: [],
        instance: [],
        permission: [],
    },
    asserts: AssertPool {
        span: [],
        kind: [],
        resource: [],
        permission: [],
        actor: [],
    },
}
