crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__diag_duplicate_relations.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: "aes_testing::render_diagnostics(source, &reporter.diagnostics)"
---
aes::parser(duplicate_relations_block)

  × duplicate relations block
   ╭─[test.aes:3:3]
 2 │   relations {}
 3 │   relations {}
   ·   ────┬────
   ·       ╰── only one relations block is allowed per test
 4 │ }
   ╰────
  help: merge all relation statements into a single `relations { ... }` block
