crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__diag_expected_term.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: "aes_testing::render_diagnostics(source, &reporter.diagnostics)"
---
aes::lexer(unexpected_character)

  × unexpected character
   ╭─[test.aes:2:11]
 1 │ type t {
 2 │   let x = @;
   ·           ┬
   ·           ╰── not valid here
 3 │ }
   ╰────

---

aes::parser(expected_term)

  × expected expression term, found ';'
   ╭─[test.aes:2:12]
 1 │ type t {
 2 │   let x = @;
   ·            ┬
   ·            ╰── expected `.relation`, `type`, `type::member`, or `(`
 3 │ }
   ╰────
